syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Cashier.Enums";

package edoxa.services.cashier;

enum CurrencyDto {
  CURRENCY_DTO_NONE = 0;
  CURRENCY_DTO_MONEY = 1;
  CURRENCY_DTO_TOKEN = 2;
  CURRENCY_DTO_ALL = -1;
}

enum TransactionTypeDto {
  TRANSACTION_TYPE_DTO_NONE = 0;
  TRANSACTION_TYPE_DTO_DEPOSIT = 1;
  TRANSACTION_TYPE_DTO_REWARD = 2;
  TRANSACTION_TYPE_DTO_CHARGE = 4;
  TRANSACTION_TYPE_DTO_PAYOUT = 8;
  TRANSACTION_TYPE_DTO_WITHDRAWAL = 16;
  TRANSACTION_TYPE_DTO_ALL = -1;
}

enum TransactionStatusDto {
  TRANSACTION_STATUS_DTO_NONE = 0;
  TRANSACTION_STATUS_DTO_PENDING = 1;
  TRANSACTION_STATUS_DTO_SUCCEDED = 2;
  TRANSACTION_STATUS_DTO_FAILED = 4;
  TRANSACTION_STATUS_DTO_CANCELED = 8;
  TRANSACTION_STATUS_DTO_ALL = -1;
}